# pyshark-plus-plus

./: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  tox.ini
examples/: list_available_interfaces.py  sniff_from_localhost.py
pyshark-plus-plus/: __init__.py  tshark_wrapper.py
pyshark_plus_plus/: __init__.py  pyshark_plus_plus.py  statistics.py
tests/: .coveragerc  run_tests.py
tests/pyshark_plus_plus/: pyshark_plus_plus.py  test_pyshark_plus_plus.py
